# dirmap

./: .gitignore  .mapping-ignore  LICENSE  MANIFEST.in  Makefile  README.md  output.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check_version.yaml  publish.yaml  update-homebrew-formula.yml
src/: main.py
src/dirmapper/: config.py  main.py
src/dirmapper/ai/: summarizer.py
src/dirmapper/formatter/: format_instruction.py  formatter.py
src/dirmapper/generator/: directory_structure_generator.py  reader.py
src/dirmapper/ignore/: ignore_list_reader.py  path_ignorer.py
src/dirmapper/styles/: base_style.py  flat_list_style.py  html_style.py  indentation_style.py  json_style.py  markdown_style.py  tree_style.py
src/dirmapper/utils/: cli_utils.py  logger.py  sorting_strategy.py  version.py
src/dirmapper/writer/: structure_writer.py  template_parser.py  writer.py
src/generator/: directory_structure_generator.py
src/ignore/: ignore_list_reader.py  path_ignorer.py
src/utils/: logger.py
tap/HomebrewFormula/: directory-mapper.rb  dirmapper.rb
tests/: __init__.py  conftest.py  test_cli_utils.py  test_directory_structure_generator.py  test_ignore_list_reader.py  test_main.py  test_path_ignorer.py
