[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirmapper"
version = "1.0.8"
description = "A CLI tool to generate a directory structure mapping."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nash Dean", email = "nashdean.github@gmail.com"}
]
dependencies = [
    "openai"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
homepage = "https://github.com/nashdean/dirmap"

[project.scripts]
dirmap = "dirmapper.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "dirmapper",
    "dirmapper.ai",
    "dirmapper.formatter",
    "dirmapper.generator",
    "dirmapper.ignore",
    "dirmapper.styles",
    "dirmapper.utils",
    "dirmapper.writer"
]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*"]
